# dio-bank

./: .gitignore  diobank.sqlite  pyproject.toml  render-deploy.sh  run.py  test_corrections.py
migrations/versions/: 7febe70f67b8_initial_migration.py  991398afce8f_add_password_field.py
src/: app.py  check_db.py  config.py
src/controllers/: auth.py  role.py  user.py  utils.py
src/models/: __init__.py  auth.py  models.py  post.py  role.py  role.py.backup  user.py  user.py.backup
src/views/: user.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user.py
tests/unit/: test_utils.py
