[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = "API Dio Bank"
authors = ["Jadson-Jose <jadsonjosesilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-jwt-extended = "^4.7.1"
flask-bcrypt = "^1.0.1"
psycopg-binary = "^3.3.2"
gunicorn = "^23.0.0"
flask-jwt = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
